2013-01-22  Stefan Moeding  <stm@moeding.net>

        * Documentation cleanup

2013-01-20  Stefan Moeding  <stm@moeding.net>

        * First Release