@@ -1,7 +1,7 @@
 # Copyright (c) 2013 Stefan Moeding
 # All rights reserved.
-# 
-# Redistribution and use in source and binary forms, with or without 
+#
+# Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
 # are met:
 # 1. Redistributions of source code must retain the above copyright
@@ -9,7 +9,7 @@
 # 2. Redistributions in binary form must reproduce the above copyright
 #    notice, this list of conditions and the following disclaimer in the
 #    documentation and/or other materials provided with the distribution.
-# 
+#
 # THIS SOFTWARE IS PROVIDED BY THE AUTHOR AND CONTRIBUTORS ``AS IS'' AND
 # ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 # IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
@@ -36,7 +36,7 @@
 #' @param object A USL model object for which prediction is desired.
 #' @param newdata An optional data frame in which to look for variables
 #'   with which to predict. If omitted, the fitted values are used.
-#'   
+#'
 #' @return \code{predict} produces a vector of predictions.
 #'
 #' @seealso \code{\link{usl}}, \code{\link{scalability}}
@@ -62,18 +62,16 @@ setMethod(
   signature = "USL",
   definition = function(object, newdata) {
     if (missing(newdata)) {
-      # Use the initial data used to create the model
-      new <- object@frame[, object@regr, drop=TRUE]
+      # Predict for the initial data used to create the model
+      newdata <- object@frame
     }
-    else {
-      # Take data from the model frame
-      new <- newdata[, object@regr, drop=TRUE]
-    }
-    
-    # Calculate values
-    pred <- scalability(object)(new)
-    names(pred) <- seq(along = pred)
-    
-    return(pred)
+
+    # Extract regressor variable from data frame
+    x <- na.omit(newdata[, object@regr, drop=TRUE])
+
+    # Calculate values (ignore NA)
+    y <- scalability(object)(x)
+
+    return(structure(y, names=row.names(newdata)))
   }
 )
