@@ -8,8 +8,12 @@
 }
 \section{Slots}{
   \describe{ \item{\code{call}:}{The call used to create
-  the model.} \item{\code{r.squared}:}{The coefficient of
-  determination.} \item{\code{coefficients}:}{The
-  coefficients sigma and kappa of the model.} }
+  the model.} \item{\code{residuals}:}{The residuals of the
+  model. This is a vector.}
+  \item{\code{r.squared}:}{Coefficient of determination of
+  the model.} \item{\code{adj.r.squared}:}{Adjusted
+  coefficient of determination.}
+  \item{\code{coefficients}:}{The coefficients sigma and
+  kappa of the model.} }
 }
 
